--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -66,7 +66,7 @@
     "* Subject\n",
     "* Description (interactions between agent and end submitter) \n",
     "\n",
-    "NLP Text Analysis & Keyword Extraction\n",
+    "#### NLP Text Analysis & Keyword Extraction\n",
     "Keyword Extraction is one of the simplest ways to leverage text mining for providing insights. It can automatically identify the most representative terms in text and documents. Such extracted keywords can be used for various applications. They can be used to summarize the underlying theme of a large document with just a few terms or in our case, key phrases and topic of a support ticket or a collection of support ticket submissions. \n",
     "\n",
     "For keyword extraction, all algorithms follow a similar model. A document is preprocessed to remove less informative words (stop words, punctuations) and then split into terms. Candidate keywords such as words and phrases are chosen. A score is determined for each candidate keyword using an algorithm. The highest-ranking keywords are selected and post-processing such as removing near-duplicates is applied. Finally, the algorithm returns the top N ranking keywords as output.  Popular keyword and phrase extraction algorithms include:\n",
