--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -740,9 +740,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Coherence measures the relative distance between words within a topic with a value between 0 < x < 1. The overall coherence score of a topic is the average of the distances between words. A ~.6 or higher indicates a strong topic correlation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "** **\n",
     "### Model Tuning\n",
-    "With the coherence score calculated for our baseline LDA model (no tuning), we can perform a series of sensitivity tests to determine the optimal parameters to feed the final model that will result in the highest coherence score. In doing so, we will identify the optimal number of topics, along with the alpha and beta parameters.\n",
+    "With the coherence score calculated for our baseline LDA model (no tuning), we can perform a series of sensitivity tests to determine the optimal parameters for tuning the final model that will result in the highest coherence score. In doing so, we will identify the optimal number of topics, along with the alpha and beta parameters.\n",
     "\n",
     "* Number of Topics\n",
     "* alpha: Document-Topic Density\n",
@@ -876,7 +883,7 @@
    "source": [
     "** **\n",
     "### Produce Final Model \n",
-    "We will use the number of topics, alpha and beta parameters from the tuning results output (csv) that yielded highest coherence value\n",
+    "We will use the number of topics, alpha and beta parameters from the tuning output (csv) that yielded the highest coherence \n",
     "** **"
    ]
   },
@@ -890,6 +897,15 @@
    "metadata": {},
    "source": [
     "![Screen%20Shot%202021-05-06%20at%204.03.58%20PM.png](attachment:Screen%20Shot%202021-05-06%20at%204.03.58%20PM.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**  **\n",
+    "### Run Final Model with Tuned Paramters\n",
+    "**  **"
    ]
   },
   {
@@ -1175,8 +1191,7 @@
    "metadata": {},
    "source": [
     "** **\n",
-    "### Static Image Representation of LDAvis Output\n",
-    "Click here for interactive LDAvis output: https://rtboes.github.io/\n",
+    "#### Click here for the interactive LDAvis chart: https://rtboes.github.io/\n",
     "** **"
    ]
   },
