--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -5,15 +5,14 @@
    "metadata": {},
    "source": [
     "** **\n",
-    "## Project Pulse, AI and Support Systems\n",
-    "Todd Boes  \n",
-    "Last Updated: May 5, 2021 \n",
+    "## Project Pulse, AI and Support Systems \n",
+    "Todd Boes\n",
     "** **\n",
     "\n",
-    "Support systems house valuable data and information that can be leveraged to better inform customer education teams on their content strategy.  By surfacing gaps in topical areas that lead to end users experiencing friction in the product signaled by the request for help, customer education teams can fill these gaps thus reducing friction that leads to a reduction in the outreach for help (aka ticket deflection). However, due to the sheer volume of support tickets and the fact that support systems are siloed and not readily accessible to departments outside of the support organizastion, it’s challenging and time consuming for customer education personnel to access and mine through large volumes of tickets required to extract meaningful and actionable data.\n",
+    "Support systems house valuable data and information that can be leveraged to better inform customer education teams on their content strategy.  By surfacing areas within a product where end users are experiencing friction, signaled by an end-user request for help, and overlaying with opportunities to improve and create training content, customer education teams are able to significantly impove key metrics related to customer adoption, engagement, ticket deflection and retention.  However, due to the sheer volume of support tickets and the fact that support systems are typically siloed and not readily accessible to departments outside of the support organization, it’s challenging and time consuming for customer education personnel to access and read through the large volumes of tickets required to extract meaningful and actionable data.\n",
     "\n",
     "#### Goal\n",
-    "One of the desired goals for Project Pulse is to surface valuable insights that are buried and hidden in support systems in an easy and consumable manner.  Machine learning and artificial intelligence technologies can be leveraged to help us understand what’s contained in these large unstructured data sets, and provide answers to questions that will lead to help making informed decisions around training and education content strategies. \n",
+    "The overarching goal of Project Pulse is to provide actionable insights that aid in improving customer education. Support systems house treasuretroves of valuable information buried, hidden and often inaccessible to those outside the support derpartment. It is here where machine learning and artificial intelligence technologies can be utilized to uncover and unleash these buried treasuetroves. Therefore, it is our goal to solve this particular problem by focusing on solutions that will quickly and easily uncover and understand these topics burrried in support systems without the manually intensive need to visually read and self analyze individual tickets.\n",
     "\n",
     "#### Questions to be Answered\n",
     "Below are some of the questions that would be valuable to answer and by doing so, help inform decisions related to content and education strategy.  By product friction, we’re defining simply as an end-user interruption in a performed task that requires an action of seeking help or assistance in order to complete a desired task.\n",
@@ -79,16 +78,16 @@
     "* Yet Another Keyword Extractor (YAKE)\n",
     "\n",
     "#### Topic Modeling using Latent Dirichlet Allocation (LDA)\n",
-    "In natural language processing, the Latent Dirichlet Allocation (LDA) is a generative statistical model that allows sets of observations to be explained by unobserved groups that explain why some parts of the data are similar. \n",
+    "In natural language processing, the Latent Dirichlet Allocation (LDA) is a statistical model that allows sets of observations to be explained by unobserved groups that explain why some parts of the data are similar.  \n",
     "\n",
     "Latent (la·​tent) adjective: present and capable of emerging or developing but not now visible, obvious, active, or symptomatic\n",
     "\n",
     "Topic modeling is an unsupervised machine learning technique that’s capable of scanning a set of documents, detecting word and phrase patterns within them, and automatically clustering word groups and similar expressions that best characterize a set of documents. Unsupervised machine learning doesn’t require a predefined list of tags or training data that’s been previously classified by humans, so it’s very low effort and does not require human interpretation of the body of text in order to produce results, therefore it’s a quick and easy way to start analyzing data. By detecting patterns such as word frequency and distance between words, a topic model clusters feedback that is similar, and words and expressions that appear most often. With this information, you can quickly deduce what each set of text blocks are talking about - in our case, the main topic in a support ticket from the interaction between a support agent and the end user who is experiencing friction and seeking help. \n",
     "\n",
     "##### To Train or Not to Train?\n",
-    "Our application of machine learning will be made simpler due to the fact that support tickets are already trained, meaning that tickets are humanly categorized and tagged by support agents that are already doing much of the heavy lifting for us. In doing so, we can apply machine learning attention more specifically - to only those tickets related to end-user friction (e.g. ticket types equaling Question,  and then further categorized by Product Facet). So essentially, our ML processing will be uncovering sub-topics within an already categorized topic such as reporting or panorama. \n",
+    "Our application of machine learning is made simpler due to the fact that support tickets are generally trained, meaning that tickets are humanly categorized and tagged by support agents that are performing much of the heavy lifting relating to training. In doing so, we can apply machine learning in a more targeted fashion - to only those tickets related to end-user friction (e.g. ticket type equaling Question, and then further categorized by Product Facet). So essentially, our ML processing will be uncovering sub-topics within a broader topic lebvel already identified such as Reporting, Panorama or Authoring. \n",
     "\n",
-    "Additionally, our tech support agents will be further classifying tickets in product facet areas using finer grained tags, which we can also utilize to further segment “like” tickets prior to analyzing them with ML, or simply using these tags without applying any machine learning.  But in many cases outside our own use case, this fine grained tagging won’t be in place across our customer bases, therefore an unsupervised approach using topic modeling will be required.  \n",
+    "Additionally, in our specific use case, Ti tech support agents will be further classifying tickets in product facet areas using finer grained tags, which can also be utilized to further segment topics prior to analyzing them with ML algorithms, or additionally, simply using these tags finer-grained classifications without needing to apply ML.  But in many cases outside our own specific use case, this fine grained tagging won’t be in place across our customer bases, therefore requiring the application of ML to the tickts' large, unstructured data set to extract meaningful topics.\n",
     "\n",
     "##### PII\n",
     "Support tickets do contain PII - much in the body of the description as many of the tickets originate via email that contains signatures with name, email, phone numbers, addresses in the footer of the email.. We do not want to store any PII that is contained in the ticketing system in Ti (nor do we need to).  Account-level info is sufficient enough.  Data therefore must be cleansed of PII during the ETL process and storage in our warehouse. \n",
@@ -904,7 +903,7 @@
    "metadata": {},
    "source": [
     "**  **\n",
-    "### Run Final Model with Tuned Paramters\n",
+    "### Run Final Model with Tuned Parameters\n",
     "**  **"
    ]
   },
@@ -1017,6 +1016,8 @@
    "source": [
     "** **\n",
     "### Visualize Final Model using LDAvis\n",
+    "Interactive web-based visualization of the topic model. LDAvis computes various summary statistics as input to\n",
+    "an interactive visualization built using D3 with the goal to help interpret the topics in the LDA topic model.\n",
     "** **"
    ]
   },
@@ -1191,7 +1192,7 @@
    "metadata": {},
    "source": [
     "** **\n",
-    "#### Click here for the interactive LDAvis chart: https://rtboes.github.io/\n",
+    "#### Click here for the interactive LDAvis web visualization: https://rtboes.github.io/\n",
     "** **"
    ]
   },
@@ -1212,30 +1213,21 @@
    "metadata": {},
    "source": [
     "### LDAvis Explained\n",
+    "LDAvis attempts to answer a few basic questions about a fitted topic model:\n",
     "\n",
-    "There are essentially four sets of visual elements that can be displayed, depending on the state of the visualization.\n",
+    "1. What is the meaning of each topic?\n",
+    "2. How prevalent is each topic?\n",
+    "3. How do the topics relate to each other?\n",
     "\n",
-    "1. Default Topic Circles: K circles, one to represent each topic, whose areas are set\n",
-    "to be proportional to the proportions of the topics across the N total tokens in the\n",
-    "corpus. The default topic circles are displayed when no term is highlighted.\n",
-    "2\n",
-    "2. Red Bars: K ×W red horizontal bars, each of which represents the estimated number\n",
-    "of times a given term was generated by a given topic. When a topic is selected, we\n",
-    "show the red bars for the R most relevant terms for the selected topic, where R = 30\n",
-    "by default (see Sievert and Shirley (2014) for the definition of relevance).\n",
-    "3. Blue Bars: W blue horizontal bars, one to represent the overall frequency of each\n",
-    "term in the corpus. When no topic is selected, we display the blue bars for the R most\n",
-    "salient terms in the corpus, and when a topic is selected, we display the blue bars for\n",
-    "the R most relevant terms. See Chuang et al. (2012) for the definition of the saliency\n",
-    "of a term in a topic model.\n",
-    "4. Topic-Term Circles: K × W circles whose areas are set to be proportional to the\n",
-    "frequencies with which a given term is estimated to have been generated by the topics.\n",
-    "When a given term, w, is highlighted, the K default circles transition (i.e. their areas\n",
-    "change) to the K topic-term circles for term w.\n",
+    "The visualization has two basic components. \n",
     "\n",
-    "Parameters of LDA\n",
-    "* Alpha parameter is Dirichlet prior concentration parameter that represents document-topic density — with a higher alpha, documents are assumed to be made up of more topics and result in more specific topic distribution per document.\n",
-    "* Beta parameter is the same prior concentration parameter that represents topic-word density — with high beta, topics are assumed to made of up most of the words and result in a more specific word distribution per topic.\n",
+    "The left panel presents a global view of the topic model, and answers questions 2 and 3. In this view, the topics are plotted as circles in the two-dimensional plane whose centers are determined by computing the distance between topics, and then using multidimensional scaling to project the intertopic distances onto two dimensions.  Each topic’s overall prevalence is then encoded using the areas of the circles, where topics are sorted in decreasing order of prevalence. \n",
+    "\n",
+    "The right panel of the visualization depicts a horizontal barchart whose bars represent the individual terms that are the most useful for interpreting the currently selected topic on the left, and answers question 1, “What is the meaning of each topic?”. A pair of overlaid bars represent both the corpus-wide frequency of a given term as well as the topic-specific frequency of the term. \n",
+    "\n",
+    "The left and right panels of the visualization are linked such that selecting a topic (on the left) reveals the most useful terms (on the right) for interpreting the selected topic. In addition, selecting a term (on the right) reveals the conditional distribution over topics (on the left) for the selected term. This kind of linked selection allows the examination of a large number of topic-term relationships in a compact manner.\n",
+    "\n",
+    "The λ slider on the top allows for the ranking of terms according to term relevance. By default, the terms of a topic are ranked in decreasing order according their topic-specific probability ( λ = 1 ). Moving the slider allows to adjust the rank of terms based on much discriminatory (or \"relevant\") are for the specific topic. The suggested “optimal” value of λ is 0.6.\n",
     "\n",
     "pyLDAvis API Documentation  \n",
     "https://pyldavis.readthedocs.io/en/latest/modules/API.html#pyLDAvis.save_html"
@@ -1250,9 +1242,10 @@
     "###### Topic Modeling\n",
     "1. Topic model — Wikipedia. https://en.wikipedia.org/wiki/Topic_model\n",
     "2. Topic Modeling in Python: Latent Dirichlet Allocation (LDA) https://towardsdatascience.com/end-to-end-topic-modeling-in-python-latent-dirichlet-allocation-lda-35ce4ed6b3e0\n",
-    "3. Distributed Strategies for Topic Modeling. https://www.ideals.illinois.edu/bitstream/handle/2142/46405/ParallelTopicModels.pdf?sequence=2&isAllowed=y\n",
-    "4. Topic Mapping — Software — Resources — Amaral Lab. https://amaral.northwestern.edu/resources/software/topic-mapping\n",
-    "5. A Survey of Topic Modeling in Text Mining. https://thesai.org/Downloads/Volume6No1/Paper_21-A_Survey_of_Topic_Modeling_in_Text_Mining.pdf\n",
+    "3. Evaluate Topic Models in LDA. https://towardsdatascience.com/evaluate-topic-model-in-python-latent-dirichlet-allocation-lda-7d57484bb5d0\n",
+    "4. Distributed Strategies for Topic Modeling. https://www.ideals.illinois.edu/bitstream/handle/2142/46405/ParallelTopicModels.pdf?sequence=2&isAllowed=y\n",
+    "5. Topic Mapping — Software — Resources — Amaral Lab. https://amaral.northwestern.edu/resources/software/topic-mapping\n",
+    "6. A Survey of Topic Modeling in Text Mining. https://thesai.org/Downloads/Volume6No1/Paper_21-A_Survey_of_Topic_Modeling_in_Text_Mining.pdf\n",
     "\n",
     "###### Open Source Topic Modeling Libraries (Python & R)\n",
     "* Gensim - https://radimrehurek.com/gensim/\n",
@@ -1284,6 +1277,13 @@
     "https://support.zendesk.com/hc/en-us/articles/203664476-analyzing-help-center-search-results-professional-and-enterprise-?page=3\n",
     "Note: in the Zendesk community comments Zendesk states that there are no current plans of making the search queries available via API\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
