--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "** **\n",
     "## Project Pulse, AI and Support Systems \n",
-    "Todd Boes\n",
+    "May, 2021\n",
     "** **\n",
     "\n",
-    "Support systems house valuable data and information that can be leveraged to better inform customer education teams on their content strategy.  By surfacing areas within a product where end users are experiencing friction, signaled by an end-user request for help, and overlaying with opportunities to improve and create training content, customer education teams are able to significantly impove key metrics related to customer adoption, engagement, ticket deflection and retention.  However, due to the sheer volume of support tickets and the fact that support systems are typically siloed and not readily accessible to departments outside of the support organization, it’s challenging and time consuming for customer education personnel to access and read through the large volumes of tickets required to extract meaningful and actionable data.\n",
+    "Support systems house valuable data and information that can be leveraged to better inform customer education teams on their content strategy.  By surfacing areas within a product where end users are experiencing friction, signaled by end-user requests for help, and overlaying with opportunities to improve or create additional training content, customer education teams are able to significantly impove key metrics related to customer adoption, engagement, ticket deflection and retention.  However, due to the sheer volume of support tickets and the fact that support systems are typically siloed and not readily accessible to departments outside of the support organization, it’s challenging and time consuming for customer education personnel to access and analyze the large volumes of tickets required to extract meaningful and actionable data.\n",
     "\n",
     "#### Goal\n",
     "The overarching goal of Project Pulse is to provide actionable insights that aid in improving customer education. Support systems house treasuretroves of valuable information buried, hidden and often inaccessible to those outside the support derpartment. It is here where machine learning and artificial intelligence technologies can be utilized to uncover and unleash these buried treasuetroves. Therefore, it is our goal to solve this particular problem by focusing on solutions that will quickly and easily uncover and understand these topics burrried in support systems without the manually intensive need to visually read and self analyze individual tickets.\n",
@@ -1192,7 +1192,7 @@
    "metadata": {},
    "source": [
     "** **\n",
-    "#### Click here for the interactive LDAvis web visualization: https://rtboes.github.io/\n",
+    "## Click here for an interactive LDAvis web visualization: https://rtboes.github.io/\n",
     "** **"
    ]
   },
