--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -12,10 +12,10 @@
     "Support systems house valuable data and information that can be leveraged to better inform customer education teams on their content strategy.  By surfacing areas within a product where end users are experiencing friction, signaled by end-user requests for help, and overlaying with opportunities to improve or create additional training content, customer education teams are able to significantly impove key metrics related to customer adoption, engagement, ticket deflection and retention.  However, due to the sheer volume of support tickets and the fact that support systems are typically siloed and not readily accessible to departments outside of the support organization, it’s challenging and time consuming for customer education personnel to access and analyze the large volumes of tickets required to extract meaningful and actionable data.\n",
     "\n",
     "#### Goal\n",
-    "The overarching goal of Project Pulse is to provide actionable insights that aid in improving customer education. Support systems house treasuretroves of valuable information buried, hidden and often inaccessible to those outside the support derpartment. It is here where machine learning and artificial intelligence technologies can be utilized to uncover and unleash these buried treasuetroves. Therefore, it is our goal to solve this particular problem by focusing on solutions that will quickly and easily uncover and understand these topics burrried in support systems without the manually intensive need to visually read and self analyze individual tickets.\n",
+    "The overarching goal of Project Pulse is to provide actionable insights that aid in improving customer education. Support systems house treasuretroves of valuable information buried, hidden and often inaccessible to those outside the support derpartment. It is here where machine learning and artificial intelligence technologies can be utilized to uncover and unleash these buried treasuetroves. Therefore, a goal is to address this challenge by creating a solution that will quickly and easily identify key topics related to product friction masked in support systems without the manually intensive need to visually read through and self analyze individual tickets.\n",
     "\n",
     "#### Questions to be Answered\n",
-    "Below are some of the questions that would be valuable to answer and by doing so, help inform decisions related to content and education strategy.  By product friction, we’re defining simply as an end-user interruption in a performed task that requires an action of seeking help or assistance in order to complete a desired task.\n",
+    "Below are some of the questions that would be valuable to answer and by doing so, help inform decisions related to content and education strategy.  By product friction, we’re defining simply as an end-user interruption in a performed task that requires an action of seeking help or assistance in order to complete the desired task.\n",
     "\n",
     "* Are customers experiencing an increase or decrease in product friction? \n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "* What content is most and least useful?\n",
     "\n",
-    "* Is the content reducing the number of support tickets being submitted? \n",
+    "* What are end users searching for when they experience friction? \n",
     "\n",
     "#### Anatomy of a Support Ticket\n",
     "Most support systems contain similar data structures and provide APIs to access and extract various elements.  Below is Zendesk’s ticket structure:\n",
@@ -60,17 +60,17 @@
     "* Tags\n",
     "\n",
     "#### Applying Machine Learning & Artificial Intelligence\n",
-    "Many of the above questions can be answered without the application of machine learning. Where machine learning can be applied is in the analysis of the large text body of the ticket - typically the the Subject and Description fields. These fields are open ended inputs, constructed by the end user and support agent, and can be analyzed for common key words, phrases, and topics across a large set of tickets. ML analysis can be applied to then abstract and visually present meaningful insights that lead to identifying the most common friction points being experienced by end users. Within each facet area of a product (e.g. Reporting) the goal is to identify and surface common topics where users are experiencing friction, alleviating content creators and instructional designers from having to sift through hundreds and thousands of support tickets in order to extract meaningful information that leads to education improvements.\n",
+    "Many of the above questions can be answered without the application of machine learning. Where machine learning can be applied is in the analysis of the large text body of the ticket - typically the the Subject and Description fields. These fields are open ended inputs, populated by the end user and support agent, and can be analyzed for common key words, phrases, and topics across a large set of tickets. ML analysis can be applied to then abstract and visually present meaningful insights that lead to identifying the most common friction points end users afre experiencing. Within each facet area of a product (e.g. Reporting) the goal is to identify and surface key topics where users are experiencing friction, alleviating content creators and instructional designers from having to sift through large volumes of support tickets in order to extract meaningful information that ultimately leads to content improvements and additions.\n",
     "\n",
     "To accomplish the goal, natural language processing (NLP), text analysis and topic modeling algorithms will be applied to key fields in the support ticket such as:\n",
     "\n",
     "* Subject\n",
-    "* Description (interactions between agent and end submitter) \n",
+    "* Description (conversation/thread between agent and end user submitter) \n",
     "\n",
     "#### NLP Text Analysis & Keyword Extraction\n",
     "Keyword Extraction is one of the simplest ways to leverage text mining for providing insights. It can automatically identify the most representative terms in text and documents. Such extracted keywords can be used for various applications. They can be used to summarize the underlying theme of a large document with just a few terms or in our case, key phrases and topic of a support ticket or a collection of support ticket submissions. \n",
     "\n",
-    "For keyword extraction, all algorithms follow a similar model. A document is preprocessed to remove less informative words (stop words, punctuations) and then split into terms. Candidate keywords such as words and phrases are chosen. A score is determined for each candidate keyword using an algorithm. The highest-ranking keywords are selected and post-processing such as removing near-duplicates is applied. Finally, the algorithm returns the top N ranking keywords as output.  Popular keyword and phrase extraction algorithms include:\n",
+    "For keyword extraction, all algorithms follow a similar model. A document is preprocessed to remove less informative words (stop words, punctuations, digits) and then split into terms. Candidate keywords such as words and phrases are chosen. A score is determined for each candidate keyword using an algorithm. The highest-ranking keywords are selected and post-processing such as removing near-duplicates is applied. Finally, the algorithm returns the top N ranking keywords as output.  Popular keyword and phrase extraction algorithms include:\n",
     "\n",
     "* Naive Counting\n",
     "* Term Frequency Inverse Document Frequency (TF-IDF)\n",
@@ -80,17 +80,15 @@
     "#### Topic Modeling using Latent Dirichlet Allocation (LDA)\n",
     "In natural language processing, the Latent Dirichlet Allocation (LDA) is a statistical model that allows sets of observations to be explained by unobserved groups that explain why some parts of the data are similar.  \n",
     "\n",
-    "Latent (la·​tent) adjective: present and capable of emerging or developing but not now visible, obvious, active, or symptomatic\n",
-    "\n",
-    "Topic modeling is an unsupervised machine learning technique that’s capable of scanning a set of documents, detecting word and phrase patterns within them, and automatically clustering word groups and similar expressions that best characterize a set of documents. Unsupervised machine learning doesn’t require a predefined list of tags or training data that’s been previously classified by humans, so it’s very low effort and does not require human interpretation of the body of text in order to produce results, therefore it’s a quick and easy way to start analyzing data. By detecting patterns such as word frequency and distance between words, a topic model clusters feedback that is similar, and words and expressions that appear most often. With this information, you can quickly deduce what each set of text blocks are talking about - in our case, the main topic in a support ticket from the interaction between a support agent and the end user who is experiencing friction and seeking help. \n",
+    "Topic modeling is an unsupervised machine learning technique that’s capable of scanning a set of documents, detecting word and phrase patterns within them, and automatically clustering word groups and similar expressions that best characterize a set of documents. Unsupervised machine learning doesn’t require a predefined list of tags or training data that’s been previously classified by humans, so it’s very low effort and does not require human interpretation of the body of text in order to produce results, therefore it’s a quick and easy way to start analyzing data. By detecting patterns such as word frequency and distance between words, a topic model clusters feedback that is similar, and words and expressions that appear most often. With this information, you can quickly deduce what each set of text blocks are talking about - in our case, the topic in a support ticket from the interaction between a support agent and product end user who is experiencing friction and seeking help. \n",
     "\n",
     "##### To Train or Not to Train?\n",
-    "Our application of machine learning is made simpler due to the fact that support tickets are generally trained, meaning that tickets are humanly categorized and tagged by support agents that are performing much of the heavy lifting relating to training. In doing so, we can apply machine learning in a more targeted fashion - to only those tickets related to end-user friction (e.g. ticket type equaling Question, and then further categorized by Product Facet). So essentially, our ML processing will be uncovering sub-topics within a broader topic lebvel already identified such as Reporting, Panorama or Authoring. \n",
+    "Our application of machine learning is made simpler due to the fact that support tickets are generally trained, meaning that tickets are humanly categorized and tagged by support agents that are performing much of the heavy lifting relating to training. In doing so, we can apply machine learning in a more targeted fashion - to only those tickets related to end-user friction/help (e.g. ticket type equaling Question, and then further categorized by Product Facet). So essentially, our ML processing will be uncovering sub-topics within a broader topic level already identified such as Reporting, Panorama or Authoring. \n",
     "\n",
-    "Additionally, in our specific use case, Ti tech support agents will be further classifying tickets in product facet areas using finer grained tags, which can also be utilized to further segment topics prior to analyzing them with ML algorithms, or additionally, simply using these tags finer-grained classifications without needing to apply ML.  But in many cases outside our own specific use case, this fine grained tagging won’t be in place across our customer bases, therefore requiring the application of ML to the tickts' large, unstructured data set to extract meaningful topics.\n",
+    "Additionally, in our specific use case, Ti tech support agents will be further classifying tickets in product facet areas using finer grained tags, which can also be utilized to further segment topics prior to analyzing them with ML algorithms, or alternatively, simply using these tags finer-grained classifications without needing to apply ML.  But in many cases outside our own specific use case, this fine grained tagging won’t be in place across our customer base, therefore requiring the application of ML to tickets' large, unstructured data set.\n",
     "\n",
     "##### PII\n",
-    "Support tickets do contain PII - much in the body of the description as many of the tickets originate via email that contains signatures with name, email, phone numbers, addresses in the footer of the email.. We do not want to store any PII that is contained in the ticketing system in Ti (nor do we need to).  Account-level info is sufficient enough.  Data therefore must be cleansed of PII during the ETL process and storage in our warehouse. \n",
+    "Support tickets do contain PII - much in the body of the description/thread as many of the tickets originate via email that contains signature footers with name, email, phone numbers, addresses, etc. We do not want to store any PII that is contained in our customer's ticketing system in Ti (nor do we need to).  Account-level info is sufficient enough.  Data therefore must be cleansed of PII during the ETL process and storage in our warehouse. \n",
     "\n"
    ]
   },
@@ -101,7 +99,7 @@
     "** **\n",
     "## Proof of Concept \n",
     "** **\n",
-    "Below is a POC written in Python that applies LDA topic modeling and analysis to a small sample (~10) of Zendesk support tickets extracted from our system. The support tickets are all of type=Question and have been categorized as \"Reporting\" for the product facet.  The application utilizes a number of open source libraries, with the gensim library utilized for the corpus, dictionary and topic modeling analysis. "
+    "Below is a POC written in Python that applies LDA topic modeling and analysis to a small sample (~10) of Zendesk support tickets extracted from our system. The support tickets are all of type=Question and have been categorized as \"Reporting\" for the product facet for this example.  The application utilizes a number of open source libraries, with the Gensim library utilized for the corpus, dictionary and topic modeling analysis. "
    ]
   },
   {
@@ -264,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each row imported from the csv represents a document that will be used to produce a topic model"
+    "Each row imported from the csv represents a document that will be used to produce a topic model.  For this POC, I'm using ~10 tickets that I manually extracted into a csv."
    ]
   },
   {
@@ -1014,6 +1012,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### As a result of the model tuning, we increased the coherence score from the baseline .48 to .61 - a 27% increase indicating a strong topic correlation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "** **\n",
     "### Visualize Final Model using LDAvis\n",
     "Interactive web-based visualization of the topic model. LDAvis computes various summary statistics as input to\n",
@@ -1192,7 +1197,7 @@
    "metadata": {},
    "source": [
     "** **\n",
-    "## Click here for an interactive LDAvis web visualization: https://rtboes.github.io/\n",
+    "## Click for an interactive LDAvis web visualization: https://rtboes.github.io/\n",
     "** **"
    ]
   },
@@ -1231,6 +1236,19 @@
     "\n",
     "pyLDAvis API Documentation  \n",
     "https://pyldavis.readthedocs.io/en/latest/modules/API.html#pyLDAvis.save_html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** **\n",
+    "### What's Next?\n",
+    "* Run model against a larger set of tickets\n",
+    "* Test model on other Ti product facets in the document corpus\n",
+    "* Determine the model and configuration settings exposed and not-exposed required for customer-specific environments\n",
+    "* Explore different visualizations for surfacing and interpreting the topic model outputs\n",
+    "** **"
    ]
   },
   {
