--- a/Topic Modeling/Pulse.ipynb
+++ b/Topic Modeling/Pulse.ipynb
@@ -1246,8 +1246,10 @@
     "### What's Next?\n",
     "* Run model against a larger set of tickets\n",
     "* Test model on other Ti product facets in the document corpus\n",
+    "* Explore methods for discerning between tickets that are \"issue\" related versus \"in need of help/how to perform something\" (common in looking at our tickets of type=question)\n",
     "* Determine the model and configuration settings exposed and not-exposed required for customer-specific environments\n",
     "* Explore different visualizations for surfacing and interpreting the topic model outputs\n",
+    "* Brainstorm on how best to provide linkages to original body of ticket descriptions for deeper, human-driven analysis \n",
     "** **"
    ]
   },
